--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bindingsjs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A micro front-end databinding / communication / state management lib.",
   "main": "bindings.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "serv sample"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/darshanmarathe/bindingsjs/issues"
   },
-  "homepage": "https://github.com/darshanmarathe/bindingsjs#readme"
+  "homepage": "https://github.com/darshanmarathe/bindingsjs#readme",
+  "devDependencies": {
+    "serv": "^0.2.4"
+  }
 }
